hphp/hack/test/typecheck/reactive/only_rx_if_args2.php
<?hh // strict

// ERROR
<<__Rx, __OnlyRxIfArgs>>
function f((function(): int) $s): void {
}
